# hnsc-mutation-landscape

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: cooccurrence_dev.ipynb  exploration.ipynb  hpv_dev.ipynb  oncoplot_dev.ipynb
results/: summary.md
scripts/: 01_load_data.py  02_clean_data.py  03_mutation_frequency.py  04_oncoplot.py  05_cooccurrence.py  06_hpv_comparison.py
